objects/Participation_Deal_Summary__c.object
<CustomObject>
    <description>C&amp;I Object</description>
    <fields>
        <fullName>Boarding_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boarding Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>Boarding_Form__c.Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Boarding_Form__c</referenceTo>
        <relationshipLabel>Participation Deal Summaries</relationshipLabel>
        <relationshipName>Participation_Deal_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Advance_on_UPB__c</fullName>
        <label>Global Advance on UPB</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Eligible_for_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Eligible for Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Exit_Fee__c</fullName>
        <label>Global Exit Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Extension_Duration_Months__c</fullName>
        <label>Global Extension Duration (Months)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Extension_Type__c</fullName>
        <label>Global Extension Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Interest_Reserve_Coverage__c</fullName>
        <inlineHelpText>Months</inlineHelpText>
        <label>Global Interest Reserve Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Interest_Reserve_Q__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Interest Reserve?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Interest_Reserve__c</fullName>
        <label>Global Interest Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_LTC__c</fullName>
        <label>Global LTC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_LTPP__c</fullName>
        <label>Global LTPP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_LTV__c</fullName>
        <label>Global LTV</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Loan_Amount__c</fullName>
        <label>Global Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Loan_Structure__c</fullName>
        <label>Global Loan Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Multi-Draw Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Lockout_Period_Yield_Maintenance__c</fullName>
        <inlineHelpText>(Months)</inlineHelpText>
        <label>Global Lockout Period/Yield Maintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Max_Accordion__c</fullName>
        <label>Global Max Accordion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Minimum_Usage_Fee__c</fullName>
        <label>Global Minimum Usage Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Non_Usage_Fee__c</fullName>
        <label>Global Non-Usage Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Number_of_Extensions__c</fullName>
        <label>Global Number of Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Origination_Fee_2__c</fullName>
        <label>Global Origination Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Origination_Fee__c</fullName>
        <label>Global Origination Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Payment_Type__c</fullName>
        <label>Global Payment Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Prepayment_Fee__c</fullName>
        <label>Global Prepayment Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Rate_Floor__c</fullName>
        <label>Global Rate Floor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Rate_Index__c</fullName>
        <label>Global Rate Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WSJP</fullName>
                </value>
                <value>
                    <fullName>30 Day LIBOR</fullName>
                </value>
                <value>
                    <fullName>60 Day LIBOR</fullName>
                </value>
                <value>
                    <fullName>90 Day LIBOR</fullName>
                </value>
                <value>
                    <fullName>6 Month LIBOR</fullName>
                </value>
                <value>
                    <fullName>3 Yr T Bill</fullName>
                </value>
                <value>
                    <fullName>5 Yr T Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Rate_Spread__c</fullName>
        <label>Global Rate Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Global_Term_Months__c</fullName>
        <label>Global Term (Months)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Participation Deal Summaries</relationshipLabel>
        <relationshipName>Participation_Deal_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Origination_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origination Summary</label>
        <referenceTo>Origination_Summary__c</referenceTo>
        <relationshipLabel>Participation Deal Summaries</relationshipLabel>
        <relationshipName>Participation_Deal_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participation Deal Summary</label>
    <nameField>
        <displayFormat>PDS {000000}</displayFormat>
        <label>Participation Deal Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participation Deal Summaries</pluralLabel>
    <recordTypes>
        <fullName>CRESL_SFDC2</fullName>
        <active>true</active>
        <description>CRESL SFDC2</description>
        <label>CRESL SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPL_SFDC2</fullName>
        <active>true</active>
        <description>IPL SFDC2</description>
        <label>IPL SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>NRELF_SFDC2</fullName>
        <active>true</active>
        <description>NRELF SFDC2</description>
        <label>NRELF SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RELF_SFDC2</fullName>
        <active>true</active>
        <description>RELF SFDC2</description>
        <label>RELF SFDC2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PDS_Months_Need_to_be_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( NOT(ISBLANK(Global_Term_Months__c)), NOT (ISNUMBER (  Global_Term_Months__c  ))),
AND( NOT(ISBLANK(Global_Extension_Duration_Months__c)),NOT (ISNUMBER (  Global_Extension_Duration_Months__c   )))
)</errorConditionFormula>
        <errorMessage>Global Term AND Global Extension Duration need to be Numerical Values</errorMessage>
    </validationRules>
</CustomObject>